# web_fetch

./: .env.example  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml  生成Jenkinsfile的提示词.md
deploy/: sudoers-webfetch-jenkins  webfetch-jenkins-deploy  webfetch-launch
deploy/systemd/: webfetch-api.service  webfetch-browser-worker.service  webfetch-http-worker.service  webfetch-maintenance.service  webfetch-maintenance.timer
docs/: webfetch-service-design.md  webfetch-service-srs.md
migrations/: env.py
migrations/versions/: 0001_create_job_tables.py
scripts/: bootstrap_database.sh  configure_server.sh  extraction_smoke_test.py  install-native.sh  smoke_test.py
sql/: init-postgresql.sql
src/JenkinsConfig/: Jenkinsfile  job-config.xml
src/webfetch_service/: __init__.py  cli.py  main.py  maintenance.py  schemas.py  worker.py
src/webfetch_service/adapters/: __init__.py  china_profile.py  generic.py
src/webfetch_service/api/: dependencies.py  routes.py
src/webfetch_service/core/: __init__.py  config.py  errors.py  ids.py  logging.py  security.py
src/webfetch_service/fetch/: __init__.py  browser.py  http.py
src/webfetch_service/persistence/: __init__.py  database.py  models.py  repository.py
src/webfetch_service/services/: artifacts.py  cache.py  fetch_service.py  rate_limit.py
tests/: test_adapters.py  test_api.py  test_artifacts.py  test_browser.py  test_cache.py  test_china_profile_adapter.py  test_deploy_script.py  test_fetch_service.py  test_http_fetcher.py  test_maintenance.py  test_migrations.py  test_rate_limit.py  test_repository.py  test_security.py
webfetch/: __init__.py  cache.py  fetcher.py  parser.py  rate_limit.py  utils.py
