[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "webfetch-service"
version = "0.1.0"
description = "Shared, reliable web fetching service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "lxml>=5,<7",
  "prometheus-client>=0.21,<1",
  "pydantic-settings>=2.6,<3",
  "redis>=5,<7",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.30,<1",
  "aiosqlite>=0.20,<1",
  "alembic>=1.14,<2",
  "cssselect>=1.2,<2",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
browser = ["playwright>=1.49,<2"]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6,<8",
  "ruff>=0.8,<1",
]

[project.scripts]
webfetch-api = "webfetch_service.cli:api"
webfetch-worker = "webfetch_service.worker:main"
webfetch-maintenance = "webfetch_service.maintenance:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires optional external infrastructure"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]
